WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132216
REGRESSION (iOS WebKit2): Selection is not being repainted during live resize
https://bugs.webkit.org/show_bug.cgi?id=132216
Summary
REGRESSION (iOS WebKit2): Selection is not being repainted during live resize
Enrica Casucci
Reported
2014-04-25 16:56:38 PDT
Need to have a mechanism to update the selection rects and force a repaint. <
rdar://problem/16628819
>
Attachments
Patch
(3.02 KB, patch)
2014-04-25 17:00 PDT
,
Enrica Casucci
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-04-25 17:00:18 PDT
Created
attachment 230225
[details]
Patch
Enrica Casucci
Comment 2
2014-04-25 17:06:52 PDT
Committed revision 167835.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug