REGRESSION (iOS WebKit2): Selection is not being repainted during live resize. https://bugs.webkit.org/show_bug.cgi?id=132216 <rdar://problem/16628819>

Reviewed by Benjamin Poulain.

Since the selection is drawn in the UIProcess on iOS,
we need to update the selection rects and force a repaint
during a live resize.

* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::dispatchDidLayout):
* WebProcess/WebPage/WebPage.h:
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::updateSelectionAppearance):



Canonical link: https://commits.webkit.org/150248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167835 268f45cc-cd09-0410-ab3c-d52691b4dbfc